more overflow fixes

--- a/src/components/styled-textarea/styled-textarea.module.scss
+++ b/src/components/styled-textarea/styled-textarea.module.scss
@@ -17,7 +17,6 @@
 
 	background-color: $secondary-color;
 	box-shadow: 0 0 20px rgba($highlight-color, 0.1);
-	border-radius: 10px;
 	color: rgba(255, 255, 255, 1);
 	padding: 1rem;
 	width: 100%;
