--- a/src/views/chat/chat.module.scss
+++ b/src/views/chat/chat.module.scss
@@ -16,6 +16,6 @@
 	flex-direction: column;
 	max-width: 40rem;
 	width: 100%;
-
+	overflow: hidden;
 	justify-content: space-between;
 }
